Fix the currency changer alignment

--- a/src/components/CurrencySwitcher.css
+++ b/src/components/CurrencySwitcher.css
@@ -2,8 +2,8 @@
     z-index: 100;
     width: 114px;
     position: absolute;
-    top: 55px;
-    right: 5%;
+    top: 50px;
+    left: -10%;
     background: #ffffff;
     box-shadow: 0px 4px 35px rgba(168, 172, 176, 0.19);
     box-sizing: content-box;
